gitops-templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <SERVICE_NAME>
  namespace: <NAMESPACE>
  labels:
    app: <SERVICE_NAME>
    env: <ENV>
spec:
  selector:
    app: <SERVICE_NAME>
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
